k8s/overlays/ssr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bossfang
  labels:
    app.kubernetes.io/name: bossfang
